downgrade JDK version to java 8